--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
       <nav>
         <a href="#" class="left">Plan<br>your<br>Visit </a>
         <a href="#" class="middle">Learn about <br> the Park</a>
-        <a href="#" class="right">Get<br>⛺<br>Involved<br></a>
+        <a href="#" class="right">Get<br>🐻<br>Involved<br></a>
         </nav>
     </header>
     <section class="cta">
       <div class="image">
         <img src="assets/header_img.jpg" alt="mountains in Yosemite" class="round">
     </div>
-    <div class="text"></div>
+    <div class="text">
     <div>
       <h1>Yosemite Park Guide</h1>
-      <h2>Come explore California’s beautiful wilderness.</h2>
+      <h2>Come explore California’s beautiful wilderness.</h2><br>
       <p>Always open. Reservations are not available or required to enter the park.</p>
     </div>
   </div>
       </section>
       <section>
         <div class="mauve">
-      <p>Not just a great valley, but a shrine to human foresight, the strength of granite, the power of glaciers, the persistence of life, and the tranquility of the High Sierra.</p>
+      <p>Not just a great valley, but a shrine to human foresight, the strength of granite, the power of glaciers, the persistence of life, and the tranquility of the High Sierra.</p><br>
       <p>First protected in 1864, Yosemite National Park is best known for its waterfalls, but within its nearly 1,200 square miles, you can find deep valleys, grand meadows, ancient giant sequoias, a vast wilderness area, and much more.</p>
     </div>  
     </section>
@@ -52,7 +52,7 @@
       <nav>
         <a href="#" class="left">Plan<br>your<br>Visit </a>
         <a href="#" class="middle">Learn about <br> the Park</a>
-        <a href="#" class="right">Get<br><br>Involved<br></a>
+        <a href="#" class="right">Get<br>⛺<br>Involved<br></a>
         </nav>
       </footer>
       </div> 
